Change and Improve UI design

--- a/lang/fa.json
+++ b/lang/fa.json
@@ -1,5 +1,9 @@
 {
     "optional": "اختیاری",
+    "My links": "لینک های من",
+    "Create new": "ساخت لینک",
+    "Home": "خانه",
+    "Menu": "منو",
 
     "floors":"طبقات",
     "metraj":"متراژ",
